# fastapi-grpc-gateway

./: .coverage  .gitignore  Cargo.toml  README.md  coverage.json  pyproject.toml
.fgg/: bindings.toml  service.proto
.github/workflows/: python-release.yml  python-wheel.yml
clients/go/: client_test.go  go.mod
crates/fgg-core/: Cargo.toml  build.rs
crates/fgg-core/proto/: wire.proto
crates/fgg-core/src/: bindings.rs  grpc_frame.rs  lib.rs  path.rs  route.rs
crates/fgg-worker/: Cargo.toml  build.rs
crates/fgg-worker/proto/: wire.proto
crates/fgg-worker/src/: lib.rs  main.rs
docs/: HOW_IT_WORKS.md  PLAN.md  PUBLISHING.md
examples/: hello_app.py
fastapi_grpc_gateway/: __init__.py  asgi_bridge.py  cli.py  convert.py  gateway.py  grpc_server.py  schema.py  serve.py  server.py  wire_pb2.py
fastapi_grpc_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: run_example.sh  test_go_client.sh  test_rust_coverage.sh
tests/: test_asgi_bridge.py  test_cli.py  test_e2e.py  test_gateway.py  test_grpc_server.py  test_schema.py  test_schema_extra.py  test_serve.py
