[project]
name = "fastapi-grpc-gateway"
version = "0.1.0"
description = "Minimal Python schema gen for Rust gRPC→HTTP worker over Granian/FastAPI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "hewimetall" }]
keywords = ["fastapi", "grpc", "granian", "schema"]
dependencies = [
    "fastapi>=0.115.0",
]

[project.urls]
Homepage = "https://github.com/hewimetall/fastapi-grpc-gateway"
Repository = "https://github.com/hewimetall/fastapi-grpc-gateway"
Issues = "https://github.com/hewimetall/fastapi-grpc-gateway/issues"
Documentation = "https://github.com/hewimetall/fastapi-grpc-gateway/blob/main/docs/HOW_IT_WORKS.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "granian>=1.6.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
]

[project.scripts]
fgg = "fastapi_grpc_gateway.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastapi_grpc_gateway*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
