[project]
name = "fastapi-grpc-gateway"
version = "0.2.0"
description = "FastAPI + Granian HTTP; gRPC served by Rust fgg-worker (no Python gRPC)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "hewimetall" }]
keywords = ["fastapi", "grpc", "granian", "asgi", "rust"]
dependencies = [
    "fastapi>=0.115.0",
    "granian>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/hewimetall/fastapi-grpc-gateway"
Repository = "https://github.com/hewimetall/fastapi-grpc-gateway"
Issues = "https://github.com/hewimetall/fastapi-grpc-gateway/issues"
Documentation = "https://github.com/hewimetall/fastapi-grpc-gateway/blob/main/docs/HOW_IT_WORKS.md"

[project.optional-dependencies]
uvicorn = [
    "uvicorn[standard]>=0.30.0",
]
gunicorn = [
    "gunicorn>=22.0.0",
    "uvicorn[standard]>=0.30.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
]

[project.scripts]
fgg = "fastapi_grpc_gateway.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastapi_grpc_gateway*"]

[tool.setuptools.package-data]
fastapi_grpc_gateway = ["proto/*.proto"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=fastapi_grpc_gateway --cov-report=term-missing --cov-fail-under=93"

[tool.coverage.run]
branch = false
source = ["fastapi_grpc_gateway"]
omit = [
    "fastapi_grpc_gateway/proto/*",
]

[tool.coverage.report]
fail_under = 93
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "except ModuleNotFoundError",
]

[tool.uv]
package = true
