[package]
name = "fgg-worker"
version = "0.1.0"
edition = "2021"
description = "gRPC worker: convert unary calls to HTTP and forward to Granian/FastAPI"
rust-version = "1.83"

[[bin]]
name = "fgg-worker"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = { version = "1.5", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1.10", features = ["tokio", "server-auto", "http1", "http2", "client", "client-legacy"] }
prost = "0.13.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "net", "signal"] }
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "=4.5.23", features = ["derive", "env"] }

[build-dependencies]
prost-build = "0.13.4"
